[ID-56] fix(project): 댓글 트리 구성 시 N+1 위험 해결